--- a/app/assets/javascripts/templates/categories/index.html.slim
+++ b/app/assets/javascripts/templates/categories/index.html.slim
@@ -3,8 +3,7 @@
     .widget
       .widget-header
         i.fa.fa-list
-        = Category.model_name.human(count: 1.1)
-        /a.pull-right href="#"  Manage
+        = Kms::Category.model_name.human(count: 1.1)
         a.btn.btn-sm.btn-primary.pull-right ui-sref="categories.new"
           = I18n.t("add_category")
       .widget-body.no-padding
