--- a/app/assets/javascripts/templates/products/edit.html.slim
+++ b/app/assets/javascripts/templates/products/edit.html.slim
@@ -6,7 +6,7 @@
 .row
   .col-lg-12
     a.btn.btn-default ui-sref="variants({product_id: product.id})"
-      = Variant.model_name.human(count: 1.1)
+      = Kms::Variant.model_name.human(count: 1.1)
 accordion close-others="true"
   ng-include src="'products/properties.html'"
   ng-include src="'products/option_types.html'"
