--- a/app/assets/javascripts/templates/products/index.html.slim
+++ b/app/assets/javascripts/templates/products/index.html.slim
@@ -3,7 +3,7 @@
     .widget
       .widget-header
         i.fa.fa-barcode
-        = Product.model_name.human(count: 1.1)
+        = Kms::Product.model_name.human(count: 1.1)
         /a.pull-right href="#"  Manage
         a.btn.btn-sm.btn-primary.pull-right ui-sref="products.new"
           = I18n.t("add_product")
