--- a/app/assets/javascripts/templates/products/option_types.html.slim
+++ b/app/assets/javascripts/templates/products/option_types.html.slim
@@ -2,7 +2,7 @@ accordion-group is-open="status.open"
   accordion-heading
     i.pull-left.glyphicon ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"
     | &nbsp;
-    = OptionType.model_name.human(count: 1.1)
+    = Kms::OptionType.model_name.human(count: 1.1)
   .row ng-controller="OptionTypesController"
     .col-lg-12
       //TODO properties list
@@ -31,7 +31,7 @@ accordion-group is-open="status.open"
         /     ui-select-choices repeat='ot in global_option_types'
         /       div ng-bind-html="ot.tag + ' / ' + ot.name | highlight: $select.search"
         .form-group
-          label for="tag" = OptionType.human_attribute_name(:tag)
+          label for="tag" = Kms::OptionType.human_attribute_name(:tag)
           .row
             .col-lg-6
               input#tag.form-control type="text" ng-model="option_type.tag" placeholder="Введите название группы для группировки товарных опций..."
@@ -42,6 +42,6 @@ accordion-group is-open="status.open"
                 ui-select-choices repeat='tag in tags'
                   div ng-bind-html="tag | highlight: $select.search"
         .form-group
-          label for="name" = OptionType.human_attribute_name(:name)
+          label for="name" = Kms::OptionType.human_attribute_name(:name)
           input#name.form-control type="text" ng-model="option_type.name" ng-required="true"
         button.btn.btn-default type="submit" = I18n.t(:create_option_type)
