--- a/app/assets/javascripts/templates/products/edit.html.slim
+++ b/app/assets/javascripts/templates/products/edit.html.slim
@@ -1,25 +1,38 @@
 .row
   .col-lg-12
-    form role="form" ng-submit="update()"
-      ng-include src="'products/form.html'"
-      button.btn.btn-default type="submit" = I18n.t(:update_product)
-.row
-  .col-lg-12
-    a.btn.btn-default ui-sref="variants({product_id: product.id})"
-      = Kms::Variant.model_name.human(count: 1.1)
-accordion close-others="true"
-  ng-include src="'products/properties.html'"
-  ng-include src="'products/option_types.html'"
-  accordion-group is-open="status.open"
-    accordion-heading
-      i.pull-left.glyphicon ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"
-      | &nbsp;SEO
-    .form-group
-      label for="seo_title" = Kms::Product.human_attribute_name(:seo_title)
-      input#seo_title.form-control type="text" ng-model="product.seo_title"
-    .form-group
-      label for="seo_keywords" = Kms::Product.human_attribute_name(:seo_keywords)
-      input#seo_keywords.form-control type="text" ng-model="product.seo_keywords"
-    .form-group
-      label for="seo_description" = Kms::Product.human_attribute_name(:seo_description)
-      input#seo_description.form-control type="text" ng-model="product.seo_description"
+    tabset
+      tab
+        tab-heading
+          i.fa.fa-barcode
+          | &nbsp;{{ product.name }}
+        .widget style="background-color: #f3f3f3;"
+          .widget-body
+            .row
+              .col-lg-12
+                form role="form" ng-submit="update()"
+                  ng-include src="'products/form.html'"
+                  button.btn.btn-default type="submit" = I18n.t(:update_product)
+            accordion close-others="true"
+              ng-include src="'products/properties.html'"
+              ng-include src="'products/option_types.html'"
+              accordion-group is-open="status.open"
+                accordion-heading
+                  i.pull-left.glyphicon ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"
+                  | &nbsp;SEO
+                .form-group
+                  label for="seo_title" = Kms::Product.human_attribute_name(:seo_title)
+                  input#seo_title.form-control type="text" ng-model="product.seo_title"
+                .form-group
+                  label for="seo_keywords" = Kms::Product.human_attribute_name(:seo_keywords)
+                  input#seo_keywords.form-control type="text" ng-model="product.seo_keywords"
+                .form-group
+                  label for="seo_description" = Kms::Product.human_attribute_name(:seo_description)
+                  input#seo_description.form-control type="text" ng-model="product.seo_description"
+      tab
+        tab-heading
+          i.fa.fa-plus
+          | &nbsp;
+          = Kms::Variant.model_name.human(count: 1.1)
+        .widget
+          .widget-body
+            ng-include src="'products/variants/index.html'"
