--- a/app/assets/javascripts/templates/products/index.html.slim
+++ b/app/assets/javascripts/templates/products/index.html.slim
@@ -4,7 +4,6 @@
       .widget-header
         i.fa.fa-barcode
         = Kms::Product.model_name.human(count: 1.1)
-        /a.pull-right href="#"  Manage
         a.btn.btn-sm.btn-primary.pull-right ui-sref="products.new"
           = I18n.t("add_product")
       .widget-body.no-padding
@@ -12,8 +11,10 @@
           table.table
             tbody
               tr ng-repeat="product in products"
-                td style="width: 80%"
+                td style="width: 70%"
                   | {{ product.name }}
+                td style="width: 20%"
+                  | {{ product.master.price }}
                 td
                   .btn-group.pull-right
                     a.btn.btn-sm.btn-info ui-sref="products.edit({id: product.id})"
