--- a/app/assets/javascripts/templates/products/variants/new.html.slim
+++ b/app/assets/javascripts/templates/products/variants/new.html.slim
@@ -1,5 +1,3 @@
-.row
-  .col-lg-12
-    form role="form" ng-submit="create()"
-      ng-include src="'products/variants/form.html'"
-      button.btn.btn-default type="submit" = I18n.t(:add_variant)
+form role="form" ng-submit="createVariant()"
+  ng-include src="'products/variants/form.html'"
+  button.btn.btn-default type="submit" = I18n.t(:add_variant)
