fix translations - remove &nbsp;

--- a/app/assets/javascripts/templates/help/catalog_variables.html.slim
+++ b/app/assets/javascripts/templates/help/catalog_variables.html.slim
@@ -11,7 +11,7 @@ p
       p
         table.table
           tr
-            th #{ I18n.t('liquor_help.properties') } Category
+            th #{ I18n.t('liquor_help.property') } Category
             th = I18n.t('liquor_help.description')
           tr
             td name
@@ -44,7 +44,7 @@ p
       p
         table.table
           tr
-            th #{ I18n.t('liquor_help.properties') } Product
+            th #{ I18n.t('liquor_help.property') } Product
             th = I18n.t('liquor_help.description')
           tr
             td name
