drag'n'drop ordering for categories

--- a/app/assets/javascripts/kms_catalog/application/controllers/categories_controller.coffee.erb
+++ b/app/assets/javascripts/kms_catalog/application/controllers/categories_controller.coffee.erb
@@ -1,6 +1,11 @@
 CategoriesController = ($scope, $state, $cookieStore, Restangular, $stateParams) ->
   $scope.editorOptions =
     filebrowserUploadUrl: '/assets/ckeditor'
+  $scope.categoriesSortableOptions =
+    orderChanged: (event)->
+      for category, index in event.dest.sortableScope.modelValue
+        category.patch(position: index)
+
   $scope.store = Restangular.all('categories')
 
   Restangular.all('users').customGET('kms_user').then (current_user) ->
