drag'n'drop ordering for products - closes #3

--- a/app/assets/javascripts/kms_catalog/application/controllers/products_controller.coffee.erb
+++ b/app/assets/javascripts/kms_catalog/application/controllers/products_controller.coffee.erb
@@ -1,6 +1,10 @@
 ProductsController = ($scope, $state, $cookieStore, Restangular, $stateParams, Alertify, ErrorsService) ->
   $scope.editorOptions =
     filebrowserUploadUrl: '/assets/ckeditor'
+  $scope.productsSortableOptions =
+    orderChanged: (event)->
+      for product, index in event.dest.sortableScope.modelValue
+        product.patch(position: index)
 
   Restangular.all('users').customGET('kms_user').then (current_user) ->
     $scope.currentUser = current_user
